--- a/projet_app_web_commerce/WebContent/gestionCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionCategories.xhtml
@@ -12,17 +12,24 @@
 
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
-	
-	
+
+
 
 </h:head>
 <body>
 
 	<h:form>
-		<h3>Ajouter une categorie</h3>
-		<p:commandButton value="Ajouter une catégorie" id="withIcon"
-			action="addCat" actionListener="#{categorieBean.initialiserCat}"
-			style="margin-right:20px;" icon="pi pi-save" />
+		<div>
+			<h3>Ajouter une categorie</h3>
+			<p:commandButton value="Ajouter une catégorie" id="withIcon"
+				action="addCat" actionListener="#{categorieBean.initialiserCat}"
+				style="margin-right:20px;" icon="pi pi-save" />
+		</div>
+		<div>
+			<h3>Gestion des admins</h3>
+			<p:commandButton id="withIcon" action="gestionUser"
+				style="margin-right:20px;" icon="pi pi-save" />
+		</div>
 	</h:form>
 	<br />
 
@@ -66,8 +73,8 @@
 				</f:facet>
 
 				<!-- données de la colonne -->
-				<h:graphicImage library="images" name="#{cat.photo}"
-					width="80" height="120" />
+				<h:graphicImage library="images/" name="#{cat.photo}" width="80"
+					height="120" />
 			</h:column>
 			<h:column>
 				<!-- en-tête de colonne -->
@@ -76,9 +83,10 @@
 				</f:facet>
 
 				<!-- données de la colonne -->
-				<p:commandButton action="modifCat" id="IconOnly" 
-						actionListener="#{categorieBean.modifCat}"
-						style="margin-right:20px;" icon="pi pi-pencil" title="Icon Only"/>
+				<p:commandButton action="modifCat" id="IconOnly"
+					actionListener="#{categorieBean.selectCat}"
+					style="margin-right:20px;" icon="pi pi-pencil" title="Icon Only" />
+				<f:param id="updateID" name="id" value="#{cat.idCategorie}" />
 			</h:column>
 			<h:column>
 				<!-- en-tête de colonne -->
@@ -87,9 +95,10 @@
 				</f:facet>
 
 				<!-- données de la colonne -->
-				<p:commandButton action="gestionCat" actionListener="#{categorieBean.suppCat}"  id="iconOnly"
+				<p:commandButton action="gestionCat"
+					actionListener="#{categorieBean.suppCat}" id="iconOnly"
 					style="margin-right:20px;" icon="pi pi-trash" title="Icon Only" />
-					<f:param id="deleteID" name="id" value="#{cat.idCategorie}"/>
+				<f:param id="deleteID" name="id" value="#{cat.idCategorie}" />
 			</h:column>
 
 		</h:dataTable>
