--- a/projet_app_web_commerce/WebContent/modifierCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/modifierCategories.xhtml
@@ -6,14 +6,16 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Page d'ajout d'une nouvelle catégorie</title>
+	<title>Page pour la modification d'une catégorie</title>
 </h:head>
 <body>
 
-	<h3>Ajouter une categorie</h3>
-	<h:form enctype="multipart/form-data">
+	
+	<h3>Modifier une categorie</h3>
 
-		<h:inputHidden value="#{categorieBean.categorie.idCategorie}" />
+	<h:form enctype="multipart/form-data">
+	
+	<h:inputHidden value="#{categorieBean.categorie.idCategorie}" />
 
 		<div class="p-field p-grid">
 			<p:outputLabel for="nomCategorie" styleClass="p-col-fixed"
@@ -35,10 +37,14 @@
 		<p:fileUpload value="#{categorieBean.categorie.photo}" mode="simple"
 			skinSimple="true" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" />
 		<br />
-		<p:commandButton value="Submit" ajax="false" action="gestionCat"
-			fileUploadListener="#{categorieBean.handleFileUpload}"/>  
+		<!-- <p:commandButton value="Submit" ajax="false"
+			action="#{categorieBean.saveCat()}" disabled="true"/> -->
 
+		<p:commandButton value="Modifier" id="withIcon"
+			action="#{categorieBean.modifierCat()}" style="margin-right:20px;"
+			icon="pi pi-save" />
 
 	</h:form>
+
 </body>
 </html>
