--- a/projet_app_web_commerce/WebContent/gestionUser.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionUser.xhtml
@@ -7,88 +7,69 @@
 
 <h:head>
 	<title>page gestion des utilisateurs</title>
+
+	<h:outputStylesheet library="style" name="primeFlex.css" />
+
+	<h:outputStylesheet name="primeicons/primeicons.css"
+		library="primefaces" />
 </h:head>
 <body>
 
 	<h:form id="form">
-		<p:growl id="msgs" showDetail="true" />
-
-		<p:dataTable id="user" var="user" value="#{listeUserBdd}"
-			editable="true" style="margin-bottom:20px">
+		<p:dataTable var="user" value="#{userBean.findAllUser()}">
 			<f:facet name="header">
-            Liste des admins
-        </f:facet>
-
-			<p:ajax event="rowEdit" listener="#{dtEditView.onRowEdit}"
-				update=":form:msgs" />
-			<p:ajax event="rowEditCancel" listener="#{dtEditView.onRowCancel}"
-				update=":form:msgs" />
+        Liste des admins
+    </f:facet>
 
 			<p:column headerText="Id">
-				<p:cellEditor>
-					<f:facet name="output">
-						<h:outputText value="#{user.idUser}" />
-					</f:facet>
-					<f:facet name="input">
-						<p:inputText id="modelInput" value="#{user.idUser}" style="width:100%" />
-					</f:facet>
-				</p:cellEditor>
+				<h:outputText value="#{user.idUser}" />
 			</p:column>
 
 			<p:column headerText="Identifiant">
-				<p:cellEditor>
-					<f:facet name="output">
-						<h:outputText value="#{user.userName}" />
-					</f:facet>
-					<f:facet name="input">
-						<p:inputText value="#{user.userName}" style="width:100%" label="Username" />
-					</f:facet>
-				</p:cellEditor>
+				<h:outputText value="#{user.userName}" />
 			</p:column>
 
 			<p:column headerText="Mot de passe">
-				<p:cellEditor>
-					<f:facet name="output">
-						<h:outputText value="#{user.password}" />
-					</f:facet>
-					<f:facet name="input">
-						<p:inputText value="#{user.password}" style="width:100%" label="Password" />
-					</f:facet>
-				</p:cellEditor>
+				<h:outputText value="#{user.password}" />
 			</p:column>
 
 			<p:column headerText="Actif">
-				<p:cellEditor>
-					<f:facet name="output">
-						<h:outputText value="#{user.actived}" />
-					</f:facet>
-					<f:facet name="input">
-						<h:selectOneMenu value="#{user.actived}" style="width:100%">
-							<f:selectItems value="#{user.actived}" var="actif"
-								itemLabel="#{actif}" itemValue="#{actif}" />
-						</h:selectOneMenu>
-					</f:facet>
-				</p:cellEditor>
-			</p:column>
-			<p:column headerText="Rôle">
-				<p:cellEditor>
-					<f:facet name="output">
-						<h:outputText value="#{user.roleName}" />
-					</f:facet>
-					<f:facet name="input">
-						<h:selectOneMenu value="#{user.roleName}" style="width:100%">
-							<f:selectItems value="#{user.roleName}" var="role"
-								itemLabel="#{role}" itemValue="#{role}" />
-						</h:selectOneMenu>
-					</f:facet>
-				</p:cellEditor>
+				<h:outputText value="#{user.actived}" />
 			</p:column>
 
-			<p:column style="width:35px">
-				<p:rowEditor />
+			<p:column headerText="Rôle">
+				<h:outputText value="#{user.roleName}" />
 			</p:column>
+			<p:column>
+				<!-- en-tête de colonne -->
+				<f:facet name="header">
+					<h:outputText value="Modifier" />
+				</f:facet>
+
+				<!-- données de la colonne -->
+				<p:commandButton action="modifUser" id="IconOnly"
+					actionListener="#{userBean.selectUser}" style="margin-right:20px;"
+					icon="pi pi-pencil" title="Icon Only" />
+				<f:param id="updateID" name="id" value="#{user.idUser}" />
+				<f:param id="roleName" name="id" value="#{user.roleName}" />
+			</p:column>
+			<p:column>
+				<!-- en-tête de colonne -->
+				<f:facet name="header">
+					<h:outputText value="Supprimer" />
+				</f:facet>
+
+				<!-- données de la colonne -->
+				<p:commandButton action="gestionUser"
+					actionListener="#{userBean.suppUser}" id="iconOnly"
+					style="margin-right:20px;" icon="pi pi-trash" title="Icon Only" />
+				<f:param id="deleteID" name="id" value="#{user.idUser}" />
+			</p:column>
+
 		</p:dataTable>
 	</h:form>
+
+
 
 </body>
 </html>
