--- a/projet_app_web_commerce/WebContent/gestionUser.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionUser.xhtml
@@ -15,6 +15,16 @@
 </h:head>
 <body>
 
+	<h:form>
+		<p:growl id="growl" life="2000" />
+		<div>
+			<h3>Ajouter un admin</h3>
+			<p:commandButton value="Ajouter un admin" id="withIcon"
+				action="addUser" actionListener="#{userBean.initialiserUser}"
+				style="margin-right:20px;" icon="pi pi-save" />
+		</div>
+	</h:form>
+
 	<h:form id="form">
 		<p:dataTable var="user" value="#{userBean.findAllUser()}">
 			<f:facet name="header">
@@ -38,9 +48,24 @@
 			</p:column>
 
 			<p:column headerText="Rôle">
-				<h:outputText value="#{user.roleName}" />
-			</p:column>
-			<p:column>
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.roleName}" />
+					</f:facet>
+					<f:facet name="input">
+						<h:selectOneMenu value="#{user.roleName}" style="width:100%">
+							<f:selectItems value="#{userBean.role}" var="role"
+								itemLabel="#{role}" itemValue="#{role}" />
+						</h:selectOneMenu>
+					</f:facet>
+				</p:cellEditor>	
+ 			</p:column> 
+ 			
+ 			<p:column>
+<!-- 			<p:column headerText="Rôle"> -->
+<!-- 				<h:outputText value="#{user.roleName}" /> -->
+<!-- 			</p:column> -->
+<!-- 			<p:column> -->
 				<!-- en-tête de colonne -->
 				<f:facet name="header">
 					<h:outputText value="Modifier" />
