--- a/projet_app_web_commerce/WebContent/gestionCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionCategories.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui" xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
 	<title>page d'accueil de la gestion des catégories</title>
@@ -13,10 +13,47 @@
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
 
-
+	<h:outputStylesheet library="style" name="styleHeader.css" />
 
 </h:head>
 <body>
+
+	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
+		<b:navbarLinks>
+			<b:navLink value="    " href="#"></b:navLink>
+		</b:navbarLinks>
+		<b:navbarLinks>
+			<b:navLink value="Gestion Categories" href="gestionCategories.xhtml"></b:navLink>
+			<b:navLink value="Gestion Admin" href="gestionUser.xhtml"></b:navLink>
+			<b:dropMenu value="Catégories">
+				<b:navLink value="#{categorieBean.categorie.nomCategorie}"></b:navLink>
+				<b:navLink value="Rôle" href="#"></b:navLink>
+			</b:dropMenu>
+		</b:navbarLinks>
+		<b:navbarLinks pull="left">
+			<b:navLink value="    " href="#"></b:navLink>
+		</b:navbarLinks>
+		<h:form class="navbar-form navbar-left hidden-md hidden-sm hidden-xs"
+			role="search">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search" />
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</h:form>
+		<!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
+
+		<b:navbarLinks pull="right" styleClass="hidden-xs">
+			<b:dropMenu value="Profil">
+				<b:navLink value="Nom"></b:navLink>
+				<b:navLink value="Rôle" href="#"></b:navLink>
+			</b:dropMenu>
+			<b:navLink value="Panier" href="#"></b:navLink>
+			<b:navLink value="Déconnexion"
+				href="#{connexionBean.deconnexionAdmin()}"></b:navLink>
+
+		</b:navbarLinks>
+	</b:navBar>
+
 
 	<h:form>
 		<p:growl id="growl" life="2000" />
