--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -26,6 +26,7 @@
 		<b:navbarLinks>
 			<b:navLink value="Gestion Categories" href="gestionCategories.xhtml"></b:navLink>
 			<b:navLink value="Gestion Admin" href="gestionUser.xhtml"></b:navLink>
+			<b:navLink value="Gestion Produits" href="GestionProduit.xhtml"></b:navLink>
 			<b:dropMenu value="Catégories">
 				<b:navLink value="#{categorieBean.categorie.nomCategorie}"></b:navLink>
 				<b:navLink value="Rôle" href="#"></b:navLink>
