implémentation panier, css accueil

--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -49,7 +49,7 @@
 				<b:navLink value="Nom"></b:navLink>
 				<b:navLink value="Rôle" href="#"></b:navLink>
 			</b:dropMenu>
-			<b:navLink value="Panier" href="#"></b:navLink>
+			<b:navLink value="Panier" href="panier.xhtml"></b:navLink>
 			<b:navLink value="Déconnexion"
 				href="#{connexionBean.deconnexionAdmin()}"></b:navLink>
 
