--- a/projet_app_web_commerce/WebContent/gestionCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionCategories.xhtml
@@ -121,7 +121,7 @@
 				</f:facet>
 
 				<!-- données de la colonne -->
-				<p:commandButton action="modifCat" id="IconOnly"
+				<p:commandButton action="addCat" id="IconOnly"
 					actionListener="#{categorieBean.selectCat}"
 					style="margin-right:20px;" icon="pi pi-pencil" title="Icon Only" />
 				<f:param id="updateID" name="id" value="#{cat.idCategorie}" />
