--- a/projet_app_web_commerce/WebContent/gestionUser.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionUser.xhtml
@@ -4,8 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:p="http://primefaces.org/ui" 
-	xmlns:b="http://bootsfaces.net/ui">
+	xmlns:p="http://primefaces.org/ui" xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
 	<title>page gestion des utilisateurs</title>
@@ -67,11 +66,16 @@
 		</div>
 	</h:form>
 
-	<h:form>
-		<p:dataTable var="user" value="#{userBean.findAllUser()}">
+	<h:form id="table">
+		<p:growl id="msgs" showDetail="true" />
+		<p:dataTable id="user" var="user" value="#{userBean.findAllUser()}"
+			editable="true" editMode="cell" widgetVar="user">
 			<f:facet name="header">
         Liste des admins
     </f:facet>
+
+			<p:ajax event="cellEdit" listener="#{userBean.onCellEdit}"
+				update="role" />
 
 			<p:column headerText="ID User">
 				<h:outputText value="#{user.idUser}" />
@@ -89,9 +93,12 @@
 				<h:outputText value="#{user.actived}" />
 			</p:column>
 
-			<p:column headerText="Rôle">
-				<h:outputText value="#{user.roleName}" />
-			</p:column>
+			<p:column headerText="Role">
+            <p:cellEditor>
+                <f:facet name="output"><h:outputText value="#{user.roleName}" /></f:facet>
+                <f:facet name="input"><p:inputText value="#{user.roleName}" style="width:96%" label="roleName"/></f:facet>
+            </p:cellEditor>
+        </p:column>
 
 			<p:column headerText="Modifier">
 				<p:commandButton action="modifUser" id="IconOnly"
