--- a/projet_app_web_commerce/WebContent/accueil.xhtml
+++ b/projet_app_web_commerce/WebContent/accueil.xhtml
@@ -100,6 +100,7 @@
 								actionListener="#{panierBean.ajouterLigneC}">
 								<f:param name="produitID" value="#{produit.idProduit}" />
 								<f:param name="prix" value="#{produit.prix}" />
+								<f:param name="quantite" value="#{panierBean.quantite}" />
 							</p:commandButton>
 						</h:form>
 
